--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~50.0.15",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11"
