--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-calendars": "^1.1304.1",
     "react-native-dotenv": "^3.4.11"
   },
   "devDependencies": {
