--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native/assets-registry": "^0.74.83",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.15",
+    "expo": "^51.0.2",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.0",
     "metro-react-native-babel-preset": "^0.77.0",
