--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.15",
+    "expo": "^51.0.8",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-calendars": "^1.1305.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "4.8.2",
