--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native/assets-registry": "^0.74.83",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -22,7 +22,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-calendars": "^1.1286.0",
+    "react-native-calendars": "^1.1305.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-picker-select": "^9.1.3",
