--- a/package.json
+++ b/package.json
@@ -10,29 +10,35 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native/assets-registry": "^0.74.83",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "^51.0.8",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.11.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-calendars": "^1.1305.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-picker-select": "^9.1.3",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-reanimated": "^3.11.0",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "uid": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-properties": "^7.24.6",
+    "@babel/plugin-transform-private-methods": "^7.24.6",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.6",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "typescript": "^5.1.3"
   },
   "private": true
